# emphaticsoft

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TESTfile  XYHist.root  cetpkg_info.sh  onmon_r500_s10.root  onmon_r605_s7.root  setup_common.sh  setup_emphaticsoft  table_deps_emphaticsoft  table_frag_emphaticsoft  test_residual.cpp
ADCUtils/: ADCUtils.cxx  ADCUtils.h  CMakeLists.txt  classes.h  classes_def.xml
ARICHML/: CMakeLists.txt  GetDataML.fcl  GetDataML_module.cc  MakeTorchDataLoader.py  makedataml_job.fcl
ARICHReco/: ARICHReco.fcl  ARICHReco_module.cc  ArichAnalizer.fcl  ArichAnalizer_module.cc  CMakeLists.txt  MakeArichCluster.fcl  MakeArichCluster_module.cc  MakeRing.fcl  MakeRing_module.cc  MakeRing_module_old.cc  PMTDet.root  arich_analize_job.fcl  arichreco_job.fcl  makearichcluster_job.fcl  makering_job.fcl
ARICHRecoUtils/: Aerogel.cc  Aerogel.h  Arich.cc  Arich.h  ArichUtils.cc  ArichUtils.h  Beam.cc  Beam.h  CMakeLists.txt  Detector.cc  Detector.h  HoughFitter.cc  HoughFitter.h  Particle.cc  Particle.h  Photon.cc  Photon.h  Utility.h  classes.h  classes_def.xml
Align/: Align.cxx  Align.h  CMakeLists.txt
Alignment/: CMakeLists.txt  CheckAlignFrontMagnet.fcl  CheckAlignFrontMagnet_module.cc  DataRecAlign_job_01.fcl  GSLStudies.cxx  GSLStudies.h  MilleRecord.cxx  MilleRecord.h  MilleResult.cxx  MilleResult.h  MilleRun.cxx  MilleRun.h  README.MD  SingleTrackAlignment.fcl  SingleTrackAlignmentV2.fcl  SingleTrackAlignmentV2_module.cc  SingleTrackAlignment_module.cc  checkalignfrontmagnet_job.fcl  simRecAlign_SAMC_01.fcl  singletrackalignment_job.fcl  testsimRecAlignSt2_job.fcl
ChannelMap/: CMakeLists.txt  ChannelDefs.h  ChannelMap.cxx  ChannelMap.fcl  ChannelMap.h  ChannelMapService.cxx  ChannelMapService.h  ChannelMap_Jan22.txt  ChannelMap_Jan22_Run436.txt  ChannelMap_Jun22.txt  ChannelMap_service.cc
ChannelState/: CMakeLists.txt  ChannelState.cxx  ChannelState.h  getSSDChannelStates.cc
DetGeoMap/: CMakeLists.txt  DetGeoDefs.h  DetGeoMap.cxx  DetGeoMap.h
Digitization/: ARICHDigitizer.fcl  ARICHDigitizer_module.cc  CMakeLists.txt  Hits_totADC_RMS_3D.root  RelabelRawDigitModules.fcl  RelabelRawDigitModules_module.cc  SSDDigitizer.fcl  SSDDigitizer_module.cc  dEtoADCmap.root  devsADCFile.root  digitization_job.fcl  rebin.C  rms.C  shareADC.C  singleRMSplot.root
EventDisplay/: CMakeLists.txt  Display3DPad.cxx  Display3DPad.h  Display3DView.cxx  Display3DView.h  DrawingPad.cxx  DrawingPad.h  EVD_module.cc  EnsureTApplication.cxx  EnsureTApplication.h  EnumToString.h  EnumToStringSparse.h  EventDisplay3D_module.cc  EventDisplay_module.cc  EvtDisplayService.h  EvtDisplayService_service.cc  EvtDisplayUtils.cxx  EvtDisplayUtils.h  GeoTransform.cxx  GeoTransform.h  GeometryDrawer.cxx  GeometryDrawer.h  LinkDef.h  NavState.cxx  NavState.h  PlotOrientation.cxx  PlotOrientation.h  TZProjPad.cxx  TZProjPad.h  WaitFor.cxx  WaitFor.h  XZYZProjectionsView.cxx  XZYZProjectionsView.h  classes.h  classes_def.xml  evd.fcl  evd.fcl-orig  evd_services.fcl  eventDisplay.fcl  eventDisplay01.fcl  (+2 more)
EventDisplayServices/: CMakeLists.txt  GeometryDrawingOptions.h  GeometryDrawingOptions_service.cc  PlotDrawingOptions.h  PlotDrawingOptions_service.cc  RawDrawingOptions.h  RawDrawingOptions_service.cc  RecoDrawingOptions.h  RecoDrawingOptions_service.cc  SimulationDrawingOptions.h  SimulationDrawingOptions_service.cc
G4Base/: CMakeLists.txt  ConvertMCTruthToG4.cxx  ConvertMCTruthToG4.h  DetectorConstruction.cxx  DetectorConstruction.h  EmphMisaligner.cxx  EmphMisaligner.h  G4Helper.cxx  G4Helper.h  GlobalMagneticField.cxx  GlobalMagneticField.h  Misaligner.cxx  Misaligner.h  PrimaryParticleInformation.cxx  PrimaryParticleInformation.h  UserActionFactory.cxx
G4EMPH/: ARICHHitAction.cxx  ARICHHitAction.h  AnalyzeSSDHitsWithTracks_module.cc  BeamGen.fcl  BeamGen_module.cc  BeamGen_module.h  BeamGen_source.cc  BeamGen_source.h  CMakeLists.txt  FastStopAction.cxx  FastStopAction.h  G4Alg.cxx  G4Alg.h  G4Gen.fcl  G4Gen_module.cc  OpticalAction.cxx  OpticalAction.h  ParticleListAction.cxx  ParticleListAction.h  SSDHitAction.cxx  SSDHitAction.h  SimSSDToRawDataSSD.fcl  SimSSDToRawDataSSD_module.cc  TOPAZGLHitAction.cxx  TOPAZLGHitAction.cxx  TOPAZLGHitAction.h  TrackListAction.cxx  TrackListAction.h  beamgen_job.fcl  g4emph.mac  g4gen_job-4GeV-piplus.fcl  g4gen_job.fcl  g4gen_jobA.fcl  g4gen_jobB.fcl  g4gen_jobC.fcl
GasCherenkov/: CMakeLists.txt  GasCkovAna.fcl  GasCkovAna_module.cc  gasCherenkovPressure.cxx  gasckovana_job.fcl
GasCkovHitReco/: CMakeLists.txt  GasCkovHitReco.fcl  GasCkovHitReco_module.cc  gasckovhitreco_job.fcl
Geometry/: CMakeLists.txt  DetChanPos.cxx  DetChanPos.h  DetectorDefs.h  Geometry.cxx  Geometry.fcl  Geometry.h  GeometryService.h  Geometry_service.cc
KalmanReco/: CMakeLists.txt  KLSMeasurement.cxx  KLSMeasurement.h  KMeasurement.cxx  KMeasurement.h  KResidual.cxx  KResidual.h  KState.cxx  KState.h  KTracker.cxx  KTracker.h  KalmanAlg.cxx  KalmanAlg.cxx-save2  KalmanAlg.h  KalmanReco_module.cc-save  Propagator.cxx  Propagator.h  SingleTrackKalmanReco.fcl  SingleTrackKalmanReco_module.cc  singleTrackKalman_job.fcl
LAPPD/: CMakeLists.txt  LAPPDEventGen_source.cc  LAPPDEventGen_source.hh  LAPPDWaveformDisplayAna_module.cc
LGCalo/: CMakeLists.txt  CMakeLists.txt.calotest  CaloProd.fcl  CaloProd_module.cc  PeakInWaveForm.cxx  caloprod_job.fcl  caloprod_r-_s-.root  caloprod_r2408_s2.root  caloprod_r2463_s2.root  calotest_job.fcl  calotest_module.cc  onepeak.root
MCValidation/: CMakeLists.txt  G4EMPHValidate.fcl  G4EMPHValidate_module.cc  g4validate_job.fcl
MagneticField/: CMakeLists.txt  FieldMap.cxx  FieldMap.h  MagneticField.cxx  MagneticField.fcl  MagneticField.h  MagneticFieldAdd.cxx  MagneticField_service.cc  ProbeCalib.cxx  TestEmphMagneticField.cxx  TestEmphMagneticField.h  studyZipTrackDataMay22_1.r  testFieldIntegration_1.r  testFieldIntegration_3.r
MomReco/: CMakeLists.txt  MomReco.fcl  MomReco_module.cc  momreco_job.fcl
RawData/: CAENV1720Fragment.cxx  CAENV1720Fragment.h  CMakeLists.txt  CMakeLists.txt-new  FragmentType.h  (+19 more)
(+1611 files in other folders)
